--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 .DS_Store
 **/.DS_Store
 **/**/.DS_Store
+**/**/**/.DS_Store
+**/**/**/**/.DS_Store
 teaching/.DS_Store
 teaching/math2102/.DS_Store
